<resources>
    <string name="app_name">Eating</string>

    <string name="title_section1">我的美食記錄</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Prototype</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_new_location">Create a new location</string>

    <string name="alert_dialog_ok">OK</string>

    <string name="alert_dialog_cancel">Cancel</string>

    <!--> Add restaurant xml<-->
    <string name="title_location">Location</string>
    <string name="save_restaurant">Save</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="restaurant_location">Location</string>
    <string name="restaurant_comment">Comment</string>
    <string name="take_photo">Take a photo</string>
    <string name="title_activity_restaurant_view_pager">Restaurants</string>

    <string name="no_restaurant">此地區沒有餐廳喔!!</string>
    <string name="hello_world">Hello world!</string>
    <string name="testing_long_string">AaaabbbbdddbdsdfsdAaaabbbbdddbdsdfsdAaaabbbbdddbdsdfsdAaaabbbbdddbdsdfsdAaaabbbbdddbdsdfsd</string>
    <string name="testing_location">台北市大安區忠孝東路四段248巷3號</string>
    <string name="title_activity_testing_viewer">TestingViewerActivity</string>
    <string name="slot_machine_button_text">PRESS!</string>
    <string name="title_restaurant_detail">Restaurant Detail</string>
</resources>
