<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.smallpigex.eat.AddRestaurantFragment"
    android:nestedScrollingEnabled="false">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ff8edcff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_location"
                    android:id="@+id/locationTextView"
                    android:textSize="36dp"
                    android:layout_alignBottom="@+id/saveRestaurant"
                    android:layout_alignParentTop="true" />

                <Button
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save_restaurant"
                    android:id="@+id/saveRestaurant"
                    android:layout_gravity="right|top"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_name"
                    android:id="@+id/textView"
                    android:textSize="22dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurantName"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_location"
                    android:id="@+id/address_view"
                    android:textSize="22dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurantLocation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_comment"
                    android:id="@+id/restaurant_comment"
                    android:textSize="22dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurantComment" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurantPhotoView" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_photo"
                        android:id="@+id/takePhoto"
                        android:layout_column="0" />
                </TableRow>

            </TableLayout>




        </LinearLayout>
    </ScrollView>

</FrameLayout>
