<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:id="@+id/imageView"
        android:src="@drawable/test_photo1"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fbfcff"
                    android:layout_margin="1dip">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurant_name"
                            android:id="@+id/tagTextView"
                            android:textSize="22sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/name"
                            android:autoText="false"
                            android:text="@string/no_restaurant"
                            android:textStyle="normal"
                            android:textSize="18sp"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurant_location"
                            android:id="@+id/textView4"
                            android:textSize="22sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_restaurant"
                            android:id="@+id/location"
                            android:autoText="false"
                            android:textStyle="normal"
                            android:textSize="18sp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"/>

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurant_comment"
                            android:id="@+id/textView5"
                            android:textSize="22dp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_restaurant"
                            android:id="@+id/comment"
                            android:autoText="false"
                            android:textStyle="normal"
                            android:textSize="18sp"
                            android:layout_gravity="left"
                            android:maxLines="1"
                            android:singleLine="false"
                            android:layout_marginLeft="10dp"/>

                    </LinearLayout>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
